ansible/roles/monitoring/files/external-node-monitoring.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: external-node-metrics
  namespace: monitoring
  labels:
    app.kubernetes.io/name: external-node-exporters
spec:
 type: ClusterIP
 ports:
 - name: metrics
   port: 9100
   targetPort: 9100
---
kind: Endpoints
apiVersion: v1
metadata:
  name: external-node-metrics
  namespace: monitoring
subsets:
  - addresses:
      - ip: 192.168.100.144
        nodeName: ikerone
      - ip: 192.168.100.1
        nodeName: router
    ports: 
      - name: metrics
        port: 9100
